apps/ingress-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-manager-service
spec:
  selector:
    app: ingress-manager-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
