apps/ingress-api/INGRESS-API.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-manager-api
  namespace: devops-tools
  labels:
    app: ingress-manager-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-manager-api
  template:
    metadata:
      labels:
        app: ingress-manager-api
    spec:
      serviceAccountName: ingress-manager-sa
      imagePullSecrets:
      - name: harbor-creds
      containers:
      - name: api
        image: harbor.devflux.ru/devops-tools/ingress-manager-api:17
        imagePullPolicy: Always
        command: ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-manager-service
  namespace: devops-tools
spec:
  selector:
    app: ingress-manager-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
---
# Ingress для доступа к API
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-manager-api-ingress
  namespace: devops-tools
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - ingress-api.k8s.devflux.ru
    secretName: ingress-api-tls
  rules:
  - host: ingress-api.k8s.devflux.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-manager-service
            port:
              number: 80
