apps/ingress-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-manager-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - ingress-api.k8s.devflux.ru
    secretName: ingress-api-tls
  rules:
  - host: ingress-api.k8s.devflux.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-manager-service
            port:
              number: 80
